--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+
 /node_modules
+
 .DS_Store
-/*.env
-npm-debug.log
-/*.cpp
+
+.env
+
+
+npm-debug.log*
+
+
+public/uploads/files/
+
+
+*.cpp
+*.out
