--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "node": "16.13.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.18.3",
     "dotenv": "^16.6.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.18.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.17.0",
-    "mongoose": "^6.2.3",
-    "multer": "^1.4.4"
+    "mongoose": "^6.13.8",
+    "multer": "^1.4.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
